--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </p>
       </a>
     </div>
-    <a href="#" class="btn2">Show All ></a>
+    <a href="" class="btn2">Show All ></a>
   </section>
 
   <section id="links" class="links">
