--- a/index.html
+++ b/index.html
@@ -7,22 +7,27 @@
   <title>Personal Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 </head>
 
 <body>
-  <header class="header">
-    <a href="#" class="logo">A. Litvinenko</a>
-
-    <nav class="navbar" id="navbar">
-      <a href="#welcome-section">Home</a>
-      <a href="#projects">Projects</a>
-      <a href="#links">Contact</a>
-    </nav>
-  </header>
+  <nav>
+    <div class="logo">
+      <a href="#">A. Litvinenko</a>
+    </div>
+    <div class="toggle">
+      <a href="#"><ion-icon name="menu-outline"></ion-icon></a>
+    </div>
+    <ul class="menu">
+      <li><a class="nav-link" href="#welcome-section">Home</a></li>
+      <li><a class="nav-link" href="#projects">Projects</a></li>
+      <li><a class="nav-link" href="#links">Contact</a></li>
+    </ul>
+  </nav>
 
   <section id="welcome-section" class="welcome">
     <div class="welcome-image">
-      <img src="images\58fdf64c2dd3a7120ac2c2ba53acc718.webp" alt="image">
+      <img src="images\58fdf64c2dd3a7120ac2c2ba53acc718.webp" alt="image" />
     </div>
     <div class="welcome-content">
       <h1>Hi, I'm Anastasiia Litvinenko</h1>
@@ -33,14 +38,13 @@
       </p>
       <a href="#" class="btn">Download CV</a>
     </div>
-
   </section>
 
   <section id="projects" class="projects">
     <h1>These are some of my projects</h1>
     <div class="projects-grid">
       <a href="https://ana-litv.github.io/Italian-Cuisine-Photo-Gallery/" target="_blank" class="project">
-        <img src="images\project1.jpg" class="project-image" alt="project">
+        <img src="images\project1.jpg" class="project-image" alt="project" />
         <p class="project-title">
           <span class="code">
             < </span>
@@ -49,7 +53,7 @@
         </p>
       </a>
       <a href="https://ana-litv.github.io/FreeCodeCamp-Tribute-Page/" target="_blank" class="project">
-        <img src="images\project2.jpg" class="project-image" alt="project">
+        <img src="images\project2.jpg" class="project-image" alt="project" />
         <p class="project-title">
           <span class="code">
             < </span>
@@ -58,7 +62,7 @@
         </p>
       </a>
       <a href="https://ana-litv.github.io/Online_museum/" target="_blank" class="project">
-        <img src="images\project3.jpg" class="project-image" alt="project">
+        <img src="images\project3.jpg" class="project-image" alt="project" />
         <p class="project-title">
           <span class="code">
             < </span>
@@ -67,7 +71,7 @@
         </p>
       </a>
       <a href="https://ana-litv.github.io/Simon-s-game/" target="_blank" class="project">
-        <img src="images\project4.jpg" class="project-image" alt="project">
+        <img src="images\project4.jpg" class="project-image" alt="project" />
         <p class="project-title">
           <span class="code">
             < </span>
@@ -76,7 +80,7 @@
         </p>
       </a>
       <a href="https://ana-litv.github.io/Login-page/" target="_blank" class="project">
-        <img src="images\project5.jpg" class="project-image" alt="project">
+        <img src="images\project5.jpg" class="project-image" alt="project" />
         <p class="project-title">
           <span class="code">
             < </span>
@@ -85,7 +89,7 @@
         </p>
       </a>
       <a href="https://ana-litv.github.io/FitZone-Landing-Page/" target="_blank" class="project">
-        <img src="images\project6.jpg" class="project-image" alt="project">
+        <img src="images\project6.jpg" class="project-image" alt="project" />
         <p class="project-title">
           <span class="code">
             < </span>
@@ -103,16 +107,49 @@
     <div class="contact-links">
       <a href="" id="profile-link" target="_blank"><i class="bx bxl-github"></i></a>
       <a href="" id="profile-link" target="_blank"><i class="bx bxl-linkedin"></i></a>
-      <a href="" id="profile-link" target="_blank"><i class='bx bxl-telegram'></i></a>
+      <a href="" id="profile-link" target="_blank"><i class="bx bxl-telegram"></i></a>
       <a href="" id="profile-link" target="_blank"><i class="bx bxl-whatsapp"></i></a>
       <a href="" id="profile-link" target="_blank"><i class="bx bx-envelope"></i></a>
     </div>
-
   </section>
   <footer>
-    <p>**This is just a fake portfolio. All the projects and contact details given are not real.</p>
+    <p>
+      **This is just a fake portfolio. All the projects and contact details
+      given are not real.
+    </p>
     <p>© Created for freeCodeCamp</p>
   </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script>
+    $(function () {
+      $(".toggle").on("click", function () {
+        if ($(".menu").hasClass("active")) {
+
+          $(".menu").removeClass("active");
+          $(this).find("a").html("<ion-icon name='menu-outline'></ion-icon>");
+
+        } else {
+
+          $(".menu").addClass("active");
+          $(this).find("a").html("<ion-icon name='close-outline'></ion-icon>");
+
+        }
+      });
+
+      $(".menu li").on("click", function () {
+
+        $(".menu").removeClass("active");
+        $(".toggle a").html("<ion-icon name='menu-outline'></ion-icon>");
+
+      });
+
+    });
+  </script>
+  <i class="baseline-subscriptions"></i>
+
 </body>
 
 </html>
+
+<!-- https://www.youtube.com/watch?v=F3pSGnhV-H8&ab_channel=CodingTonight -->
