Changed the links

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <section id="welcome-section" class="welcome">
     <div class="welcome-image">
-      <img src="images\58fdf64c2dd3a7120ac2c2ba53acc718.webp" alt="image" />
+      <img src="images\58fdf64c2dd3a7120ac2c2ba53acc718.webp" alt="image" loading="lazy" />
     </div>
     <div class="welcome-content">
       <h1>Hi, I'm Anastasiia Litvinenko</h1>
@@ -44,7 +44,7 @@
     <h1>These are some of my projects</h1>
     <div class="projects-grid">
       <a href="https://ana-litv.github.io/Italian-Cuisine-Photo-Gallery/" target="_blank" class="project">
-        <img src="images\project1.jpg" class="project-image" alt="project" />
+        <img src="images\project1.jpg" class="project-image" alt="project" loading="lazy" />
         <p class="project-title">
           <span class="code">
             < </span>
@@ -53,7 +53,7 @@
         </p>
       </a>
       <a href="https://ana-litv.github.io/FreeCodeCamp-Tribute-Page/" target="_blank" class="project">
-        <img src="images\project2.jpg" class="project-image" alt="project" />
+        <img src="images\project2.jpg" class="project-image" alt="project" loading="lazy" />
         <p class="project-title">
           <span class="code">
             < </span>
@@ -62,7 +62,7 @@
         </p>
       </a>
       <a href="https://ana-litv.github.io/Online_museum/" target="_blank" class="project">
-        <img src="images\project3.jpg" class="project-image" alt="project" />
+        <img src="images\project3.jpg" class="project-image" alt="project" loading="lazy" />
         <p class="project-title">
           <span class="code">
             < </span>
@@ -71,7 +71,7 @@
         </p>
       </a>
       <a href="https://ana-litv.github.io/Simon-s-game/" target="_blank" class="project">
-        <img src="images\project4.jpg" class="project-image" alt="project" />
+        <img src="images\project4.jpg" class="project-image" alt="project" loading="lazy" />
         <p class="project-title">
           <span class="code">
             < </span>
@@ -80,7 +80,7 @@
         </p>
       </a>
       <a href="https://ana-litv.github.io/Login-page/" target="_blank" class="project">
-        <img src="images\project5.jpg" class="project-image" alt="project" />
+        <img src="images\project5.jpg" class="project-image" alt="project" loading="lazy" />
         <p class="project-title">
           <span class="code">
             < </span>
@@ -89,7 +89,7 @@
         </p>
       </a>
       <a href="https://ana-litv.github.io/FitZone-Landing-Page/" target="_blank" class="project">
-        <img src="images\project6.jpg" class="project-image" alt="project" />
+        <img src="images\project6.jpg" class="project-image" alt="project" loading="lazy" />
         <p class="project-title">
           <span class="code">
             < </span>
@@ -105,11 +105,11 @@
     <h1>Connect with me:</h1>
 
     <div class="contact-links">
-      <a href="" id="profile-link" target="_blank"><i class="bx bxl-github"></i></a>
-      <a href="" id="profile-link" target="_blank"><i class="bx bxl-linkedin"></i></a>
-      <a href="" id="profile-link" target="_blank"><i class="bx bxl-telegram"></i></a>
-      <a href="" id="profile-link" target="_blank"><i class="bx bxl-whatsapp"></i></a>
-      <a href="" id="profile-link" target="_blank"><i class="bx bx-envelope"></i></a>
+      <a href="#" id="profile-link" target="_blank"><i class="bx bxl-github"></i></a>
+      <a href="#" id="profile-link" target="_blank"><i class="bx bxl-linkedin"></i></a>
+      <a href="#" id="profile-link" target="_blank"><i class="bx bxl-telegram"></i></a>
+      <a href="#" id="profile-link" target="_blank"><i class="bx bxl-whatsapp"></i></a>
+      <a href="#" id="profile-link" target="_blank"><i class="bx bx-envelope"></i></a>
     </div>
   </section>
   <footer>
@@ -151,5 +151,3 @@
 </body>
 
 </html>
-
-<!-- https://www.youtube.com/watch?v=F3pSGnhV-H8&ab_channel=CodingTonight -->
